force-app/main/default/objects/Property_Amenities__c/Property_Amenities__c.object-meta.xml
<CustomObject>
    <label>Property Amenities</label>
    <nameField>
        <displayFormat>PA-ID-{00000}</displayFormat>
        <label>Property Amenities ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Amenities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>