force-app/main/default/objects/Property_Amenities__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Amenities</label>
    <referenceTo>Amenities__c</referenceTo>
    <relationshipLabel>Property Amenities</relationshipLabel>
    <relationshipName>Property_Amenities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>